# fastapi-ml-platform

./: .env.example  .env.production.example  .env.staging.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  calibration.py  drift.py  evaluation.py  health.py  jobs.py  metrics.py  models.py  observability.py  predictions.py  retention.py  threshold.py
app/core/: audit.py  config.py  correlation.py  exceptions.py  jobs.py  logging.py  metrics.py  passwords.py  principal.py  rate_limit.py  redis_queue.py  request_limits.py  scheduler.py  security.py  tokens.py  tracing.py
app/db/: models.py  session.py
app/ml/: calibration.py  drift.py  evaluation.py  explainer.py  feature_pipeline.py  holdout.py  model_loader.py  model_provider.py  shap_explainer.py  threshold.py  training.py
app/repositories/: batch_job_repository.py  dead_letter_repository.py  drift_report_repository.py  model_registry_repository.py  prediction_repository.py  user_repository.py
app/schemas/: auth.py  calibration.py  drift.py  evaluation.py  jobs.py  metrics.py  model.py  prediction.py  retention.py  threshold.py
app/services/: auth_service.py  batch_job_service.py  batch_tasks.py  calibration_service.py  drift_report_service.py  drift_service.py  evaluation_service.py  ingestion_service.py  metrics_service.py  model_registry_service.py  model_service.py  prediction_service.py  retention_service.py  threshold_service.py
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.example.yaml  service.yaml
deploy/terraform/: README.md  main.tf  outputs.tf  variables.tf
docs/: api-examples.md  architecture.md
docs/deployment/: aws-ecs.md  blue-green-models.md
migrations/: env.py
migrations/versions/: a6a61ec0d65b_initial_schema.py
scripts/: evaluate_model.py  run_worker.py  train_model.py
tests/: conftest.py  test_audit.py  test_auth.py  test_auth_jwt.py  test_batch_jobs.py  test_calibration.py  test_config_profiles.py  test_correlation.py  test_dead_letters.py  test_drift_reports.py  test_evaluation.py  test_health.py  test_ingestion.py  test_migrations.py  test_model_registry.py  test_models_metrics_drift.py  test_observability.py  test_pii_masking.py  test_postgres_integration.py  test_predictions.py  test_rate_limit.py  test_redis_queue.py  test_request_limits.py  test_retention.py  test_scheduler.py  test_shap_explainer.py  test_threshold.py  test_tracing.py  test_training.py
