[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-ml-platform"
version = "0.1.0"
description = "Production-style FastAPI service for real-time fraud-risk scoring."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Diogo Ribeiro" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "asyncpg>=0.29,<1.0",
    "python-json-logger>=3.0,<5.0",
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.4,<2.0",
    "joblib>=1.4,<2.0",
    "prometheus-client>=0.20,<1.0",
    "pyjwt>=2.8,<3.0",
]

[project.optional-dependencies]
explain = [
    "shap>=0.45,<1.0",
]
tracing = [
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2.0",
]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "S"]
ignore = ["S101"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency injection relies on calls in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security", "fastapi.Query", "fastapi.Header"]

[tool.ruff.lint.per-file-ignores]
# X/y naming follows scikit-learn convention.
"app/ml/training.py" = ["N806"]
# Tests use hardcoded credentials and tokens by design.
"tests/*" = ["S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["joblib.*", "sklearn.*", "shap.*", "opentelemetry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
